--- a/HIS/src/main/resources/application.yml
+++ b/HIS/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
   mail:
     host: smtp.gmail.com
     username: sam9695654346@gmail.com
-    password: aaa
+    password: Gmail*sam@9695
     properties:
       mail:
         smtp:
