--- a/HIS/src/main/resources/application.yml
+++ b/HIS/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: sam9695654346@gmail.com
-    password: Gmail*sam@9695
+    username: ********
+    password: ********
     properties:
       mail:
         smtp:
