--- a/HIS/src/main/resources/application.yml
+++ b/HIS/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         format_sql: true
     database-platform: org.hibernate.dialect.H2Dialect
   mvc:
@@ -19,8 +19,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: abc
-    password: xyz
+    username: sam9695654346@gmail.com
+    password: Gmail*sam@9695
     properties:
       mail:
         smtp:
