--- a/HIS/src/main/resources/application.yml
+++ b/HIS/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 server:
   port: 9935    
 spring:
-  banner:    location: classpath:hisBanner.txt
+  banner:
+    location: classpath:hisBanner.txt
   datasource:
     url: jdbc:h2:mem:HIS
     driver-class-name: org.h2.Driver
@@ -19,8 +20,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: sam9695654346@gmail.com
-    password: Gmail*sam@9695
+    username: abc
+    password: abc
     properties:
       mail:
         smtp:
