--- a/HIS/src/main/resources/application.yml
+++ b/HIS/src/main/resources/application.yml
@@ -20,8 +20,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: abc
-    password: abc
+    username: ip6.sam@gmail.com
+    password: itdwnvnzphmiosmj
     properties:
       mail:
         smtp:
